stock-processor-service/src/main/fabric8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}-${project.version}
  labels:
    expose: "true"
    group: ${project.groupId}
    project: ${project.artifactId}-${project.version}
    version: ${project.version}
    provider: fabric8
    monitorGroup: ctti
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
type: ClusterIP
